# AI_PDF_READER

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build-desktop.yml
backend/: main.py
backend/app/: chain.py  main.py  parser.py  prompts.py  stream_explanation.py
config/: config.py
electron/: main.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ApiKeysPanel.jsx  AssistantPanel.jsx  AssistantSidebar.jsx  PdfViewer.jsx  Toolbar.jsx
